--- a/RainOrShine/CurrentWeatherView.xib
+++ b/RainOrShine/CurrentWeatherView.xib
@@ -4,9 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,29 +18,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <visualEffectView opaque="NO" contentMode="scaleToFill" id="nw4-vT-ifU">
-            <rect key="frame" x="0.0" y="0.0" width="144" height="199"/>
+            <rect key="frame" x="0.0" y="0.0" width="135" height="173"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QDU-yx-Ne7">
-                <rect key="frame" x="0.0" y="0.0" width="144" height="199"/>
+                <rect key="frame" x="0.0" y="0.0" width="135" height="173"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="103" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c60-pf-SdH">
-                        <rect key="frame" x="8" y="8" width="128" height="38"/>
+                        <rect key="frame" x="3" y="4" width="128" height="38"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="38" id="8et-Wi-iog"/>
+                            <constraint firstAttribute="height" constant="38" id="HAM-uO-1jQ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByDarkSky" translatesAutoresizingMaskIntoConstraints="NO" id="ogr-Cj-P3m">
-                        <rect key="frame" x="30" y="164" width="85" height="31"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="31" id="xhn-Wg-IGU"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="qsK-Fj-OsB">
-                        <rect key="frame" x="8" y="122" width="128" height="43"/>
+                        <rect key="frame" x="3" y="106" width="128" height="43"/>
                         <string key="text">Partly 
 Cloudy</string>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
@@ -50,28 +42,34 @@ Cloudy</string>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2e2-FY-yY2" customClass="SKYIconView" customModule="RainOrShine" customModuleProvider="target">
-                        <rect key="frame" x="37" y="48" width="70" height="70"/>
+                        <rect key="frame" x="35" y="42" width="64" height="64"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByDarkSky" translatesAutoresizingMaskIntoConstraints="NO" id="ogr-Cj-P3m">
+                        <rect key="frame" x="28" y="145" width="78" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="28" id="bPH-9W-65G"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="c60-pf-SdH" firstAttribute="top" secondItem="QDU-yx-Ne7" secondAttribute="topMargin" id="5yF-T9-hq3"/>
-                    <constraint firstItem="c60-pf-SdH" firstAttribute="centerX" secondItem="2e2-FY-yY2" secondAttribute="centerX" id="FFE-xA-JZp"/>
-                    <constraint firstAttribute="bottom" secondItem="ogr-Cj-P3m" secondAttribute="bottom" constant="4" id="FOa-ax-Msx"/>
-                    <constraint firstItem="c60-pf-SdH" firstAttribute="leading" secondItem="QDU-yx-Ne7" secondAttribute="leadingMargin" id="HbZ-jz-dp9"/>
-                    <constraint firstItem="ogr-Cj-P3m" firstAttribute="leading" secondItem="QDU-yx-Ne7" secondAttribute="leading" constant="30" id="LQK-pl-Ojp"/>
-                    <constraint firstItem="qsK-Fj-OsB" firstAttribute="top" secondItem="2e2-FY-yY2" secondAttribute="bottom" constant="4" id="cim-mK-mUS"/>
-                    <constraint firstItem="c60-pf-SdH" firstAttribute="leading" secondItem="qsK-Fj-OsB" secondAttribute="leading" id="dUD-rS-cJc"/>
-                    <constraint firstItem="qsK-Fj-OsB" firstAttribute="centerX" secondItem="ogr-Cj-P3m" secondAttribute="centerX" id="hlz-OK-c4Q"/>
-                    <constraint firstItem="2e2-FY-yY2" firstAttribute="top" secondItem="c60-pf-SdH" secondAttribute="bottom" constant="2" id="mAp-Rk-rfc"/>
-                    <constraint firstItem="c60-pf-SdH" firstAttribute="trailing" secondItem="qsK-Fj-OsB" secondAttribute="trailing" id="nP4-Rb-ziB"/>
-                    <constraint firstItem="2e2-FY-yY2" firstAttribute="leading" secondItem="QDU-yx-Ne7" secondAttribute="leading" constant="37" id="rwM-ZY-L0q"/>
-                    <constraint firstItem="c60-pf-SdH" firstAttribute="trailing" secondItem="QDU-yx-Ne7" secondAttribute="trailingMargin" id="u39-sK-wNY"/>
-                    <constraint firstItem="ogr-Cj-P3m" firstAttribute="top" secondItem="2e2-FY-yY2" secondAttribute="bottom" constant="46" id="vwO-wR-V0X"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="leading" secondItem="QDU-yx-Ne7" secondAttribute="leading" constant="3" id="4ve-u4-onn"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="centerX" secondItem="QDU-yx-Ne7" secondAttribute="centerX" id="Dpb-fM-mBj"/>
+                    <constraint firstItem="2e2-FY-yY2" firstAttribute="leading" secondItem="QDU-yx-Ne7" secondAttribute="leading" constant="35" id="ITf-WB-s0J"/>
+                    <constraint firstItem="qsK-Fj-OsB" firstAttribute="centerX" secondItem="ogr-Cj-P3m" secondAttribute="centerX" id="Q3e-Lq-B7F"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="leading" secondItem="qsK-Fj-OsB" secondAttribute="leading" id="U0Y-UI-zHi"/>
+                    <constraint firstItem="2e2-FY-yY2" firstAttribute="top" secondItem="c60-pf-SdH" secondAttribute="bottom" id="UPZ-5Y-kN6"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="centerX" secondItem="2e2-FY-yY2" secondAttribute="centerX" id="XNk-OD-zvr"/>
+                    <constraint firstItem="ogr-Cj-P3m" firstAttribute="top" secondItem="2e2-FY-yY2" secondAttribute="bottom" constant="39" id="Xvn-Tg-3VE"/>
+                    <constraint firstItem="ogr-Cj-P3m" firstAttribute="leading" secondItem="QDU-yx-Ne7" secondAttribute="leading" constant="28" id="bhJ-yU-O2R"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="top" secondItem="QDU-yx-Ne7" secondAttribute="top" constant="4" id="lxl-wB-Dh8"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="trailing" secondItem="qsK-Fj-OsB" secondAttribute="trailing" id="q8l-pE-w8U"/>
+                    <constraint firstAttribute="bottom" secondItem="ogr-Cj-P3m" secondAttribute="bottom" id="ule-Jc-Kze"/>
+                    <constraint firstItem="qsK-Fj-OsB" firstAttribute="top" secondItem="2e2-FY-yY2" secondAttribute="bottom" id="yOH-YV-Bo9"/>
                 </constraints>
             </view>
             <blurEffect style="light"/>
-            <point key="canvasLocation" x="-84" y="15.5"/>
+            <point key="canvasLocation" x="-84.5" y="11.5"/>
         </visualEffectView>
     </objects>
     <resources>
