--- a/RainOrShine/FutureWeatherDayView.xib
+++ b/RainOrShine/FutureWeatherDayView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,58 +19,62 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <visualEffectView opaque="NO" contentMode="scaleToFill" id="FRo-p1-72L">
-            <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+            <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="NdC-WO-zJi">
-                <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+                <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyw-aP-RP6">
-                        <rect key="frame" x="4" y="4" width="44" height="21"/>
+                        <rect key="frame" x="0.0" y="0.0" width="55" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Bas-yc-Clb"/>
+                            <constraint firstAttribute="height" constant="21" id="LD2-S5-Ypg"/>
                         </constraints>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNn-F4-chT" customClass="SKYIconView" customModule="RainOrShine" customModuleProvider="target">
-                        <rect key="frame" x="10" y="29" width="32" height="32"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="70 / 88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UbG-Bv-2nE">
-                        <rect key="frame" x="2" y="65" width="48" height="21"/>
+                        <rect key="frame" x="0.0" y="53" width="54" height="14"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="ue5-2x-Qo2"/>
+                            <constraint firstAttribute="height" constant="14" id="Vri-LW-M4k"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="10"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fg" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="ymR-cc-zp8">
-                        <rect key="frame" x="5" y="91" width="43" height="66"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="ymR-cc-zp8">
+                        <rect key="frame" x="0.0" y="67" width="55" height="56"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="66" id="sXJ-1x-hub"/>
+                            <constraint firstAttribute="height" constant="56" id="kvW-zY-ePp"/>
                         </constraints>
+                        <string key="text">Line 1
+Line 2
+Line 3
+Line 4 Line 5</string>
                         <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNn-F4-chT" customClass="SKYIconView" customModule="RainOrShine" customModuleProvider="target">
+                        <rect key="frame" x="11" y="21" width="32" height="32"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="UbG-Bv-2nE" firstAttribute="centerX" secondItem="ymR-cc-zp8" secondAttribute="centerX" id="5tr-gK-EfQ"/>
-                    <constraint firstItem="UbG-Bv-2nE" firstAttribute="leading" secondItem="NdC-WO-zJi" secondAttribute="leading" constant="2" id="9Ww-LU-BAG"/>
-                    <constraint firstItem="iyw-aP-RP6" firstAttribute="trailing" secondItem="ymR-cc-zp8" secondAttribute="trailing" id="BAP-M2-jO3"/>
-                    <constraint firstItem="ymR-cc-zp8" firstAttribute="top" secondItem="UbG-Bv-2nE" secondAttribute="bottom" constant="5" id="Gbt-fY-tzZ"/>
-                    <constraint firstItem="LNn-F4-chT" firstAttribute="leading" secondItem="NdC-WO-zJi" secondAttribute="leading" constant="10" id="Hvz-j8-YWF"/>
-                    <constraint firstItem="iyw-aP-RP6" firstAttribute="leading" secondItem="NdC-WO-zJi" secondAttribute="leading" constant="4" id="Oac-C0-xDx"/>
-                    <constraint firstItem="LNn-F4-chT" firstAttribute="centerX" secondItem="UbG-Bv-2nE" secondAttribute="centerX" id="ROC-4x-0fn"/>
-                    <constraint firstItem="LNn-F4-chT" firstAttribute="top" secondItem="iyw-aP-RP6" secondAttribute="bottom" constant="4" id="SoJ-Lq-F3C"/>
-                    <constraint firstItem="iyw-aP-RP6" firstAttribute="centerX" secondItem="NdC-WO-zJi" secondAttribute="centerX" id="Y3f-9g-6WP"/>
-                    <constraint firstItem="iyw-aP-RP6" firstAttribute="top" secondItem="NdC-WO-zJi" secondAttribute="top" constant="4" id="uez-Yy-TZ3"/>
-                    <constraint firstItem="iyw-aP-RP6" firstAttribute="centerX" secondItem="LNn-F4-chT" secondAttribute="centerX" id="wg8-59-nRI"/>
-                    <constraint firstAttribute="bottom" secondItem="ymR-cc-zp8" secondAttribute="bottom" constant="4" id="xl8-KD-cvw"/>
-                    <constraint firstItem="UbG-Bv-2nE" firstAttribute="top" secondItem="LNn-F4-chT" secondAttribute="bottom" constant="4" id="xop-DG-Tfl"/>
+                    <constraint firstItem="LNn-F4-chT" firstAttribute="top" secondItem="iyw-aP-RP6" secondAttribute="bottom" id="1QD-tc-ghh"/>
+                    <constraint firstItem="ymR-cc-zp8" firstAttribute="top" secondItem="UbG-Bv-2nE" secondAttribute="bottom" id="4d5-9A-rHS"/>
+                    <constraint firstItem="iyw-aP-RP6" firstAttribute="top" secondItem="NdC-WO-zJi" secondAttribute="top" id="52s-SH-Q3f"/>
+                    <constraint firstItem="iyw-aP-RP6" firstAttribute="centerX" secondItem="LNn-F4-chT" secondAttribute="centerX" id="8yN-11-gyy"/>
+                    <constraint firstItem="iyw-aP-RP6" firstAttribute="trailing" secondItem="ymR-cc-zp8" secondAttribute="trailing" id="D9v-lg-FYS"/>
+                    <constraint firstItem="iyw-aP-RP6" firstAttribute="leading" secondItem="NdC-WO-zJi" secondAttribute="leading" id="NHH-OR-pkx"/>
+                    <constraint firstItem="LNn-F4-chT" firstAttribute="leading" secondItem="NdC-WO-zJi" secondAttribute="leading" constant="11" id="SRy-MN-nv5"/>
+                    <constraint firstItem="UbG-Bv-2nE" firstAttribute="leading" secondItem="ymR-cc-zp8" secondAttribute="leading" id="XV1-iq-ozQ"/>
+                    <constraint firstItem="LNn-F4-chT" firstAttribute="centerX" secondItem="UbG-Bv-2nE" secondAttribute="centerX" id="jX8-NG-27I"/>
+                    <constraint firstItem="UbG-Bv-2nE" firstAttribute="top" secondItem="LNn-F4-chT" secondAttribute="bottom" id="p3T-ZV-3Gc"/>
+                    <constraint firstAttribute="trailing" secondItem="UbG-Bv-2nE" secondAttribute="trailing" id="rAJ-N6-YY4"/>
+                    <constraint firstItem="iyw-aP-RP6" firstAttribute="leading" secondItem="UbG-Bv-2nE" secondAttribute="leading" id="rbk-ba-EFN"/>
+                    <constraint firstAttribute="bottom" secondItem="ymR-cc-zp8" secondAttribute="bottom" id="wOl-vD-9GZ"/>
                 </constraints>
             </view>
             <blurEffect style="light"/>
