--- a/RainOrShine/FutureWeatherView.xib
+++ b/RainOrShine/FutureWeatherView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,78 +15,55 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="272" height="161"/>
+            <rect key="frame" x="0.0" y="0.0" width="282" height="123"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLv-gV-Tst" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="s4Q-sj-HXE">
-                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="52" id="tVP-79-7Fe"/>
-                    </constraints>
-                    <blurEffect style="dark"/>
-                </visualEffectView>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b19-Wk-mM1" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="220" y="0.0" width="52" height="161"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QjB-5p-gDq">
-                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hLv-gV-Tst" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="s4Q-sj-HXE">
+                        <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <blurEffect style="dark"/>
                 </visualEffectView>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GCC-j1-V2X" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="165" y="0.0" width="52" height="161"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9Ak-YF-kFX">
-                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCC-j1-V2X" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
+                    <rect key="frame" x="171" y="0.0" width="54" height="123"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="9Ak-YF-kFX">
+                        <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="52" id="A9c-jR-fDN"/>
-                    </constraints>
                     <blurEffect style="dark"/>
                 </visualEffectView>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6QQ-Ee-zOc" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="55" y="0.0" width="52" height="161"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bgr-lE-fw0">
-                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6QQ-Ee-zOc" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
+                    <rect key="frame" x="57" y="0.0" width="54" height="123"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="bgr-lE-fw0">
+                        <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="52" id="75c-d7-JHX"/>
-                    </constraints>
                     <blurEffect style="dark"/>
                 </visualEffectView>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cnd-LG-7nP" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="110" y="0.0" width="52" height="161"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="J8B-ff-Mhr">
-                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cnd-LG-7nP" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
+                    <rect key="frame" x="114" y="0.0" width="54" height="123"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="J8B-ff-Mhr">
+                        <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <blurEffect style="dark"/>
+                </visualEffectView>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b19-Wk-mM1" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
+                    <rect key="frame" x="228" y="0.0" width="54" height="123"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="QjB-5p-gDq">
+                        <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <blurEffect style="dark"/>
                 </visualEffectView>
             </subviews>
-            <constraints>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="leading" secondItem="6QQ-Ee-zOc" secondAttribute="trailing" constant="3" id="3Yp-Wk-lfj"/>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="bottom" secondItem="GCC-j1-V2X" secondAttribute="bottom" id="6Hv-nt-fRY"/>
-                <constraint firstItem="b19-Wk-mM1" firstAttribute="leading" secondItem="GCC-j1-V2X" secondAttribute="trailing" constant="3" id="6Qz-a7-Zvc"/>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="top" secondItem="GCC-j1-V2X" secondAttribute="top" id="FVM-2k-556"/>
-                <constraint firstItem="GCC-j1-V2X" firstAttribute="leading" secondItem="Cnd-LG-7nP" secondAttribute="trailing" constant="3" id="K1S-fl-0KJ"/>
-                <constraint firstAttribute="trailing" secondItem="b19-Wk-mM1" secondAttribute="trailing" id="PWl-DA-y4z"/>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="RgO-1c-kab"/>
-                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="top" secondItem="Cnd-LG-7nP" secondAttribute="top" id="T3l-3M-4bf"/>
-                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="bottom" secondItem="Cnd-LG-7nP" secondAttribute="bottom" id="Vc8-lZ-L0F"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="bottom" secondItem="6QQ-Ee-zOc" secondAttribute="bottom" id="XGR-Zn-zuN"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="top" secondItem="6QQ-Ee-zOc" secondAttribute="top" id="d5M-nx-qRy"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gcl-jW-2Ih"/>
-                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="leading" secondItem="hLv-gV-Tst" secondAttribute="trailing" constant="3" id="hye-bS-oLB"/>
-                <constraint firstItem="GCC-j1-V2X" firstAttribute="top" secondItem="b19-Wk-mM1" secondAttribute="top" id="kCI-mA-TcP"/>
-                <constraint firstItem="GCC-j1-V2X" firstAttribute="bottom" secondItem="b19-Wk-mM1" secondAttribute="bottom" id="pq3-79-gmn"/>
-                <constraint firstAttribute="bottom" secondItem="hLv-gV-Tst" secondAttribute="bottom" id="qIu-0B-jGO"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wLt-9X-dl2"/>
-            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="34" y="54.5"/>
